test/src/e2e_vm_tests/test_programs/should_fail/payable_attribute_extra_in_implementation/src/main.sw
contract;

abi MyContract {
    fn payable();
}

impl MyContract for Contract {
    // extra #[payable] attribute (not mentioned in the ABI)
    #[payable]
    fn payable() {
    }
}
